--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "monkey-chunky-stage-4",
-  "version": "0.0.0",
-  "description": "No description",
-  "author": null,
-  "private": true,
   "main": "node_modules/expo/AppEntry.js",
-  "devDependencies": {
-    "babel-preset-expo": "^7.0.0"
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^36.0.0",
-    "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "react-native-paper": "3.1.1",
-    "expo-av": "8.0.0",
-    "react-native-elements": "1.2.7"
-  }
+    "@react-navigation/bottom-tabs": "^5.11.9",
+    "@react-navigation/native": "^5.9.4",
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.11",
+    "react-navigation": "^4.4.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
